Zoom on drawings and CSS for completed

--- a/questioner/static/questioner/complete.css
+++ b/questioner/static/questioner/complete.css
@@ -1,3 +1,8 @@
+body {
+    color: #333;
+    font-family: Flama,Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
 /* Style the statistics image */ 
 img {
     width: 80%;
