Questioner model structure clean up

--- a/questioner/templates/questioner/modelling.html
+++ b/questioner/templates/questioner/modelling.html
@@ -33,7 +33,7 @@
             </div>
             <!-- Show drawing in right panel -->
             <div>
-                <img src="{{ question.drawing_jpeg }}" id="zoom"/>
+                <img src="{{ question.drawing_jpeg }}" />
             </div>
         </div>
     </body>
