--- a/questioner/templates/questioner/solution.html
+++ b/questioner/templates/questioner/solution.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'questioner/give_up.css' %}">
+        <link rel="stylesheet" href="{% static 'questioner/solution.css' %}">
     </head>
     <body>
         <h2>You were almost there!</h2>
