--- a/questioner/static/questioner/modelling.css
+++ b/questioner/static/questioner/modelling.css
@@ -18,16 +18,19 @@ th {
 }
 
 /* Main content */
-.main {
-    position: fixed;
-}
-
 #feedback {
     padding-top: 30px;
 }
 
 /* The navigation bar */
+#navbar {
+    overflow: hidden;
+    background-color: #333;
+}
+
 #navbar ul {
+    list-style-type: none;
+    table-layout: fixed;
     width: 100%; 
     margin: 0;
     padding: 0;
@@ -37,12 +40,13 @@ th {
 
 #navbar li {
     display: table-cell;
+    vertical-align: middle;
 }
 
 #navbar li a {
     position: relative;
     display: block;
-    background: #333;
+    background-color: #333;
     color: #f2f2f2;
     padding: 20px 20px;
     text-decoration: none;
