Added Home Page

--- a/questioner/static/questioner/index.css
+++ b/questioner/static/questioner/index.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     left: 0;
     bottom: 0;
-    text-align: center;
+    text-align: left;
     padding: 4px;
     font-size: 10px;
     background-color: white;
