--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -128,7 +128,7 @@
         <br /><br />
         <!-- Disclaimer -->
         <div>
-            <p id="disclaimer"><b>DISCLAIMER: </b>By using this app you are agreeing to have anonymized data about your modelling process recorded and used for research purposes.</p>
+            <p id="disclaimer"><b>DISCLAIMER: </b>By using this app you are agreeing to have anonymized data about your modelling process recorded and used for research purposes. <a href="{% url 'questioner:in_app_home' user.os_user_id %}">Click here</a> to learn more.</p>
         </div>
         <!-- Enable hide-and-show for accordions -->
         <script src="{% static 'questioner/accordion.js' %}" type="text/javascript"></script>
