--- a/questioner/templates/questioner/home.html
+++ b/questioner/templates/questioner/home.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="{% static 'questioner/home.css' %}">
     </head>
     <body>
-        {% if user|slugify != "anonymoususer" %}
+        {% if user %}
             <!-- Return to the home page -->
-            <br>
+            <br />
             <form action="{% url 'questioner:index' user.os_user_id %}">
                 <input type="submit" value="Return to Home Page"/>
             </form>
@@ -44,7 +44,7 @@
             <h2 id="data-types">Data Types</h2>
             <p>Each of the following sections details one type of design data that the app is currently collecting. However, at different occurrences, different types of data are being collected (see the <a href="#data-collection">data collection section</a> for more details). </p>
             <h3 id="microversion-descriptions">Microversion descriptions</h3>
-            <p>For every change made in an Onshape document, an immutable <em>microversion</em> is automatically created and logged by Onshape in the document’s history. When the data is recorded in the app, the <code>username</code> of every microversion entry (as obtained from Onshape&#39;s API) is automatically removed. This data type is retrieved using the <code>Document/getDocumentHistory</code> API endpoint (<a href="https://cad.onshape.com/glassworks/explorer/#/Document/getDocumentHistory">ref</a>). </p>
+            <p>For every change made in an Onshape document, an immutable <em>microversion</em> is automatically created and logged by Onshape in the document's history. When the data is recorded in the app, the <code>username</code> of every microversion entry (as obtained from Onshape&#39;s API) is automatically removed. This data type is retrieved using the <code>Document/getDocumentHistory</code> API endpoint (<a href="https://cad.onshape.com/glassworks/explorer/#/Document/getDocumentHistory">ref</a>). </p>
             <p>The microversion history is stored as a list of JSON objects in reversed chronological order. Every element of the list stores the description of one microversion. An example of a microversion description is shown below: </p>
             <pre><code class="lang-json">
             {
