--- a/questioner/templates/questioner/solution.html
+++ b/questioner/templates/questioner/solution.html
@@ -16,9 +16,9 @@
             <input type="submit" value="Open Reference Document"/>
         </form>
         <!-- Submit Feedback -->
-        <form action="https://docs.google.com/forms/d/e/1FAIpQLSeOcFJo3V05CMtQSAXmmiF22xdfsdaob7_tBCTCDEwZVdVRwA/viewform?usp=sf_link" target="_blank">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeOcFJo3V05CMtQSAXmmiF22xdfsdaob7_tBCTCDEwZVdVRwA/viewform?usp=pp_url&entry.386921303={{ question.question_name }}" target="_blank">
             <input type="submit" value="Open Feedback Form (optional)"/>
-        </form>
+        </a>
         <!-- Return to the home page -->
         <form action="{% url 'questioner:index' user.os_user_id %}">
             <input type="submit" value="Return to Home Page"/>
