Adding footer link to feedback form

--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -132,7 +132,7 @@
         <br /><br />
         <!-- Disclaimer -->
         <div>
-            <p id="disclaimer"><a href="{% url 'questioner:home' user.os_user_id %}#documentation-on-data-collection">Data Collection Disclaimer</a> | <a href="{% url 'questioner:home' user.os_user_id %}#details">Detailed Instructions</a></p>
+            <p id="disclaimer"><a href="{% url 'questioner:home' user.os_user_id %}#documentation-on-data-collection">Data Collection Disclaimer</a> | <a href="{% url 'questioner:home' user.os_user_id %}#details">Detailed Instructions</a> | <a href="https://docs.google.com/forms/d/e/1FAIpQLSeOcFJo3V05CMtQSAXmmiF22xdfsdaob7_tBCTCDEwZVdVRwA/viewform?usp=sf_link">Feedback</a></p>
         </div>
         <!-- Enable hide-and-show for accordions -->
         <script src="{% static 'questioner/accordion.js' %}" type="text/javascript"></script>
