--- a/questioner/static/questioner/modelling.css
+++ b/questioner/static/questioner/modelling.css
@@ -8,12 +8,17 @@ body {
 table {
     text-align: left;
     width: 100%;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
+    border-top: 2px solid;
+    border-bottom: 2px solid;
 }
 
 th {
-    border-bottom: 1px solid;
+    border-bottom: 2px solid;
+    border-collapse: collapse;
+}
+
+.sep td {
+    border-top: 1px solid;
     border-collapse: collapse;
 }
 
