--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -3,7 +3,7 @@
     <head>
         {% load static %}
         <link rel="stylesheet" href="{% static 'questioner/index.css' %}">
-        <!-- Load search_filter and type_filter functions for the search menu, difficulty filtering, and type filtering -->
+        <!-- Load search_filter functions for the search menu, difficulty filtering, and question type filtering -->
         <script src="{% static 'questioner/search_filter.js' %}" type="text/javascript"></script>
     </head>
     <body>
@@ -59,7 +59,7 @@
             </div>
             <div>
                 <input type="radio" name="qType" class="radio" id="single_type" onclick="search_filter()" />
-                <label for="single_type">Single Part</label>
+                <label for="single_type">Single-Part</label>
             </div>
             <div>
                 <input type="radio" name="qType" class="radio" id="multi_type" onclick="search_filter()" />
@@ -95,7 +95,15 @@
                     <div class="panel">
                         <ul>
                             <!-- Question type -->
-                            <li class="type">Challenge type: {{ question.get_question_type_display }}</li>
+                            {% if question.question_type == 'MSPS' %}
+                                {% if question.is_multi_part %}
+                                    <li class="q_type">Challenge type: Multi-part Part Studio</li>
+                                {% else %}
+                                    <li class="q_type">Challenge type: Single-part Part Studio</li>
+                                {% endif %}
+                            {% else %}
+                                <li class="q_type">Challenge type: {{ question.get_question_type_display }}</li>
+                            {% endif %}
                             <!-- Update difficulty_filter.js if changing <li> here -->
                             {% if question.difficulty == "EA" %}
                                 <li class="difficulty">Difficulty: Easy</li>
